(lang dune 3.16)

(name semnodes)

(generate_opam_files true)

(source
 (github helloworlddan/semnodes))

(authors "Daniel Stamer")

(maintainers "Daniel Stamer")

(license Apache2)

(documentation https://url/to/documentation)

(package
 (name semnodes)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
