(lang dune 3.16)

(name semnodes)

(generate_opam_files true)

(source
 (github helloworlddan/semnodes))

(authors "Daniel Stamer")

(maintainers "Daniel Stamer")

(license Apache2)

(documentation https://url/to/documentation)

(package
 (name semnodes)
 (synopsis "Semantic node control for bspwm")
 (description "Semantic node control for bspwm")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
